--- a/1905.08255/InfoParadox.tex
+++ b/1905.08255/InfoParadox.tex
@@ -918,7 +918,7 @@ For example, we can imagine starting with a small black hole, with Bekenstein-Ha
 When can we reconstruct the diary from the Hawking radiation? As discussed in Section \ref{sec:evaporation}, for any pure initial black hole state, there is a phase transition in the Ryu-Takayanagi surface at the Page time. After this point, the diary will be in the entanglement wedge of the Hawking reservoir $\mathcal{H}_\text{rad}$ (assuming it was thrown into the black hole at least one scrambling time into the past).
 
 Unfortunately, our lack of knowledge about the state of the black hole prevents us from taking advantage of this fact. Instead, we can only successfully decode the state of the diary once a state-independent reconstruction becomes possible that works for the entire code space of possible initial states.
-\begin{figure}[t]
+\begin{figure}[p]
 \includegraphics[width = 0.4\linewidth]{Evaporation_AfterPage_Reference.png}
 \centering
 \caption{After the Page time, the entanglement wedge of the reservoir contains most of the interior for any pure initial black hole microstate. However, if we only know that the initial state was in some large class of possible microstates, we cannot take advantage of this fact to do a Hayden-Preskill recovery, unless the interior is also contained in the entanglement wedge for states in the code space of possible microstates that are highly entangled with a reference system. This entanglement entropy increases the generalised entropy of the non-empty quantum extremal surface (dotted lines) and can make the Ryu-Takayanagi surface $\chi_\text{rad}$ become empty (solid line), preventing us for doing a Hayden-Preskill reconstruction until the black hole has evaporated further.}
@@ -940,7 +940,7 @@ The same effect happens with reconstructions of the interior on the boundary CFT
  S_\text{code} < S_{BH} - \Srad.
 \end{align}
 The interior can therefore only be reconstructed on $\mathcal{H}_\text{CFT}$ in a state-independent way for code spaces with entropy $S_\text{code}$ satisfying \eqref{eq:statedependencebeforepage}. Initially, we don't need to know very much about the state of the black hole to reconstruct the entire interior on the boundary CFT. However, as the black hole evaporates, the reconstruction becomes more and more state-dependent. Eventually, just before the Page time, one needs to know the exact initial state of the black hole. Again, \eqref{eq:statedependencebeforepage} agrees with toy models.
-\begin{figure}[t]
+\begin{figure}[p]
 \includegraphics[width = 0.5\linewidth]{Evaporation_BeforePage_Reference.png}
 \centering
 \caption{Before the Page time, the interior is in the entanglement wedge of the CFT for any pure state. However, if the initial state is allowed to be highly entangled with a reference system, the Ryu-Takayanagi surface $\chi_{{}_\text{CFT}}$ for the CFT may jump to the non-empty quantum extremal surface. (In contrast, the RT surface $\chi_\text{rad}$ of the reservoir will remain empty.) This means that a reconstruction of the interior that acts only on the CFT, and not on the reservoir, will have to be at least somewhat state dependent, if the code space is too large.}
