--- a/1601.05416/entanglementprl.tex
+++ b/1601.05416/entanglementprl.tex
@@ -1,10 +1,43 @@
 %
-\documentclass[aps,prl,twocolumn,nofootinbib,longbibliography,superscriptaddress]{revtex4-1}
+\documentclass[aps,nofootinbib,longbibliography,superscriptaddress,12pt]{revtex4-1}
 \usepackage{hyperref}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{graphicx}
+
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10,
+colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=8000
+\hbadness=8000
+
+% different \sum and also fixes underbraces
+\input{../helpers/mnsymbol.tex}
+
+% optional
+
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
+
 %\usepackage[inline]{showlabels} \usepackage{color} \renewcommand{\showlabelfont}{\small\ttfamily\color{magenta}}%
 \newcommand{\be}{\begin{equation}}
 \newcommand{\ee}{\end{equation}}
