--- a/hep-th-0603001/paperLAST.tex
+++ b/hep-th-0603001/paperLAST.tex
@@ -1,5 +1,5 @@
 %\documentclass[preprint,amsmath,amssymb,nofootinbib,eqsecnum,tighten]{revtex4}
-\documentclass[twocolumn,amsmath,amssymb,nofootinbib,eqsecnum,tighten,prd]{revtex4}
+\documentclass[amsmath,amssymb,nofootinbib,eqsecnum,tighten,prd,12pt]{revtex4}
 %\documentclass[preprint,showpacs,preprintnumbers,amsmath,amssymb]{revtex4}
 %\documentclass[twocolumn,showpacs,preprintnumbers,amsmath,amssymb]{revtex4}
 
@@ -8,6 +8,36 @@
 %\documentclass[preprint,aps,draft]{revtex4}
 %\documentclass[prb]{revtex4}% Physical Review B
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% different \sum and also fixes underbraces
+\input{../helpers/mnsymbol.tex}
+
+% optional
+
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \usepackage{fancybox}
 \usepackage{graphicx}% Include figure files
@@ -144,7 +174,7 @@ Entanglement Entropy from AdS/CFT}
          Santa Barbara,
          CA 93106,
          USA}
-\date{\today}
+\date{7 Mar 2006}
 
 
 \begin{abstract}
@@ -162,6 +192,7 @@ Yang-Mills.
 
 
 \maketitle
+\newpage
 
 
 \section{Introduction}
