--- a/1607.03901/operatorsv2.tex
+++ b/1607.03901/operatorsv2.tex
@@ -9,6 +9,39 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{amsfonts}
+
+\hypersetup{
+colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true,
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
+% different \sum and also fixes underbraces
+\input{../helpers/mnsymbol.tex}
+
+% optional
+
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
+
 \usepackage[utf8]{inputenc}
 \newcommand{\D}{\mathcal{D}}
 \newcommand{\be}{\begin{equation}}
@@ -672,7 +705,7 @@ The flow lines of a $v(x)$ which attains this maximum are interpreted as giving 
 
 
 \bfig
-\includegraphics[height=4cm]{subregions2.pdf}
+\includegraphics[height=3.5cm]{subregions2.pdf}
 \caption{Tripartite entanglement.  On the left, I indicate the locations of the bulk degrees of freedom from eq. \eqref{triple}.  In the center I draw threads  $v_{A,B}$ that simultaneously maximize the flux through $A$ and $AB$, while on the right I draw threads $v_{B,A}$ that instead maximize the flux through $B$ and $AB$.}\label{mp}
 \efig
 So far I have focused on bipartite entanglement between $A$ and $\Ab$, but it is also interesting to consider multipartite decompositions, such as the one shown in the right diagram of figure \ref{subregions}.  For simplicity I will only consider the subsystem code case, where we take the bulk algebra to factorize into different spatial regions.  For the tripartite decomposition of figure \ref{subregions} there are four interesting bulk regions, labeled in the left diagram of figure \ref{mp}. $|\wt{i}\ran$, $|\wt{j}\ran$, and $|\wt{k}\ran$ denote complete bases for the bulk degrees of freedom in $\mathcal{E}_A$, $\mathcal{E}_B$, and $\mathcal{E}_C$, and $|\wt{l}\ran$ is a complete basis for the remaining bulk degrees of freedom, which are simultaneously in $\mathcal{E}_{AB}$, $\mathcal{E}_{AC}$, and $\mathcal{E}_{BC}$.  If we assume entanglement wedge reconstruction holds for all entanglement wedges, then an argument similar to that for \eqref{sstate} tells us that we must have decompositions $\HA=\Hh_{A_1}\otimes \Hh_{A_2}\oplus\Hh_{A_3}$, $\Hh_B=\Hh_{B_1}\otimes \Hh_{B_2}\oplus\Hh_{B_3}$, and $\Hh_C=\Hh_{C_1}\otimes \Hh_{C_2}\oplus\Hh_{C_3}$, unitaries $U_A$, $U_B$, and $U_C$, and a set of orthonormal states $|\chi_l\ran_{A_2B_2C_2}$ such that
@@ -751,7 +784,7 @@ Indeed pure state black holes have always been somewhat awkward to fit into disc
 One possible resolution of all this would be to avoid considering a code subspace that contains all of the microstates in a fixed energy band, but this is somewhat unsatisfying, especially since in section six of \cite{Pastawski:2015qua} it was explained how subregion duality is possible in a tensor network model even if the code subspace includes all the microstates of a black hole of some fixed energy.  In that model, black hole microstates are produced by removing tensors from the network wherever the black holes are located, as illustrated in figure \ref{blackhole2}.  The isometric nature of the network implies that the entropy of the full boundary will be given by the entropy of whatever state is fed into the green microstate legs and the blue bulk field legs.  So apparently the RT formula \eqref{flm} still holds for arbitrary states fed into these legs, \textit{provided that we view the black hole entropy as contributing to the bulk entropy term rather than the area term}.  In the remainder of this section I will explore the consequences of this idea, which I claim removes any remaining tension between linearity the RT formula \eqref{flm}.
 
 \bfig
-\includegraphics[height=4.5cm]{blackholes.pdf}
+\includegraphics[height=3.5cm]{blackholes.pdf}
 \caption{Area and bulk terms in the RT formula according to proposition \ref{bhprop}, for various configurations of black holes.  On the left we have a black hole in each entanglement wedge, each of which contributes its von Neumann entropy to the bulk entropy term in the RT formulae for $S(\wt{\rho}_A)$ and $S(\wt{\rho}_{\Ab})$ respectively.  In the center we have a single black hole, whose degrees of freedom partly contribute to $S(\wt{\rho}_A)$ and partly contribute to $S(\wt{\rho}_{\Ab})$, again through the bulk entropy terms. On the right we take the limit where the black hole fills the entire space, in which case the area term is eventually removed entirely.  In each case the surface $\Xi$ is shaded grey, and black holes are black.}\label{bhfig}
 \efig
 Let's first recall that in subsection \ref{gaugesec}, we have already seen that the decomposition of the CFT entropy of a region into an area piece and a bulk entropy piece is UV-sensitive.  By enlarging the code subspace to allow more UV degrees of freedom to vary, we can move entropy from the area piece to the bulk entropy piece.  We can think of my proposal to view black hole entropy as bulk entropy in this context: sometimes the code subspace is small enough that we can get away with including black hole entropy in the area piece and applying the homology constraint (for example studying only small perturbations of the TFD), but sometimes we can't.  The rule which works in general is to always include it in the bulk entropy piece.  I thus offer the following proposition:\footnote{This proposition needs to be better-formulated to really apply in general time-dependent situations, but it will be good enough for my examples.  I also am not sure how to deal with changes of $\gamma_A$ which increase its area but decrease the horizon part of the entropy by more, one guess is that any intersections between $\gamma_A$ and $\mathcal{B}_A$ are located by extremizing the sum of the area and bulk entropy terms, as suggested by \cite{Engelhardt:2014gca}, but I'm not sure if this is correct.}
