--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,30 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-11-20 18:11:15 -0500 
+%% Created for Pete Su at 2019-11-20 18:20:56 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Harlow:2016vwg,
+	Archiveprefix = {arXiv},
+	Author = {Harlow, Daniel},
+	Date-Added = {2019-11-20 18:20:26 -0500},
+	Date-Modified = {2019-11-20 18:20:55 -0500},
+	Doi = {10.1007/s00220-017-2904-z},
+	Eprint = {1607.03901},
+	Journal = {Commun. Math. Phys.},
+	Note = {\href{https://arxiv.org/abs/1607.03901}{arXiv:1607.03901}},
+	Number = {3},
+	Pages = {865-912},
+	Primaryclass = {hep-th},
+	Slaccitation = {%%CITATION = ARXIV:1607.03901;%%},
+	Title = {{The Ryu--Takayanagi Formula from Quantum Error Correction}},
+	Volume = {354},
+	Year = {2017},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00220-017-2904-z}}
 
 @article{Ryu:2006bv,
 	Archiveprefix = {arXiv},
