--- a/1301.4504/decodingv5.tex
+++ b/1301.4504/decodingv5.tex
@@ -18,6 +18,31 @@
 \newcommand{\textcs}[1]{\textsf{#1}}
 \newcommand{\NP}{\textcs{NP}}
 \newcommand{\QSZK}{\textcs{QSZK}}
+
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
+% different \sum and also fixes underbraces
+%\input{../helpers/mnsymbol.tex}
+
+% optional
+
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
+
 \begin{document}
 \subheader{Dedicated to John Preskill on the occasion of his 60th birthday}
 \title{Quantum Computation vs. Firewalls}
