--- a/1301.4504/jheppub.sty
+++ b/1301.4504/jheppub.sty
@@ -1,15 +1,40 @@
+%% jheppub.sty
+%% Copyright 2013 SISSA Medialab
+%
+% This work may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License, either version 1.3
+% of this license or (at your option) any later version.
+% The latest version of this license is in
+%   http://www.latex-project.org/lppl.txt
+% and version 1.3 or later is part of all distributions of LaTeX
+% version 2005/12/01 or later.
+%
+% This work has the LPPL maintenance status `author-maintained'.
+%
+% The Current Maintainer of this work is
+% SISSA Medialab <info@medialab.sissa.it>
+%
+% This work consists of the file jheppub.sty.
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{jheppub}
+\ProvidesPackage{jheppub}[2013/03/21 r534]
 
 
 \gdef\@fpheader{Prepared for submission to JHEP}
 \gdef\@journal{jhep}
 
+\newif\ifnotoc\notocfalse
+\newif\ifemailadd\emailaddfalse
+\newif\iftoccontinuous\toccontinuousfalse
+\newif\ifnatbibsort\natbibsorttrue
+
+\DeclareOption{no-natbib-sort}{\natbibsortfalse}
+\ProcessOptions\relax
+
 \RequirePackage{amsmath}
 \RequirePackage{amssymb}
 \RequirePackage{epsfig}
 \RequirePackage{graphicx}
-\RequirePackage[numbers,sort&compress]{natbib}
+\ifnatbibsort\RequirePackage[numbers,sort&compress]{natbib}\else\RequirePackage[numbers,compress]{natbib}\fi
 \RequirePackage{color}
 \RequirePackage[colorlinks=true
 ,urlcolor=blue
@@ -21,11 +46,8 @@
 ,pagecolor=blue
 ,linktocpage=true
 ,pdfproducer=medialab
+,pdfa=true
 ]{hyperref}
-
-\newif\ifnotoc\notocfalse
-\newif\ifemailadd\emailaddfalse
-\newif\iftoccontinuous\toccontinuousfalse
 
 \def\@subheader{\@empty}
 \def\@keywords{\@empty}
@@ -36,6 +58,7 @@
 \def\@collaboration{\@empty}
 \def\@collaborationImg{\@empty}
 \def\@proceeding{\@empty}
+\def\@preprint{\@empty}
 
 \newcommand{\subheader}[1]{\gdef\@subheader{#1}}
 \newcommand{\keywords}[1]{\if!\@keywords!\gdef\@keywords{#1}\else%
@@ -49,6 +72,7 @@
 \newcommand\jname{JHEP}
 \newcommand\acknowledgments{\section*{Acknowledgments}}
 \newcommand\notoc{\notoctrue}
+\newcommand\preprint[1]{\gdef\@preprint{\hfill #1}}
 
 
 
@@ -133,7 +157,7 @@
 %this is the ``itemsep'' of the affiliations list
 \newlength{\affiliationsSep}\setlength{\affiliationsSep}{-3pt}
 %this hook is needed if the toc starts on the first page
-\newcommand\beforetochook{\pagenumbering{roman}}
+\newcommand\beforetochook{\pagestyle{myplain}\pagenumbering{roman}}
 
 \DeclareFixedFont\trfont{OT1}{phv}{b}{sc}{11}
 
@@ -143,15 +167,15 @@
 \pagestyle{empty}
 \thispagestyle{titlepage}
 \setcounter{page}{0}
-\noindent{\small\scshape\@fpheader}\par
+\noindent{\small\scshape\@fpheader}\@preprint\par
 \afterLogoSpace
 % Subheader
 \if!\@subheader!\else\noindent{\trfont{\@subheader}}\fi
 \afterSubheaderSpace
-% Proceedings 
+% Proceedings
 \if!\@proceeding!\else\noindent{\sc\@proceeding}\fi
 \afterProceedingsSpace
-% Title 
+% Title
 {\LARGE\flushleft\sffamily\bfseries\@title\par}
 \afterTitleSpace
 % Rule
@@ -185,7 +209,7 @@
 % E-mail
 \ifemailadd %% if emailadd is true
 \noindent\hspace{0.28cm}\begin{minipage}[l]{.9\textwidth}
-\begin{flushleft} 
+\begin{flushleft}
 \textit{E-mail:} \the\email@toks
 \end{flushleft}
 \end{minipage}
@@ -195,16 +219,16 @@
 \afterEmailSpace
 %Erratum or addendum
 \if!\@xtum!\else\noindent{\@xtum}\afterXtumSpace\fi
-% Abstract 
+% Abstract
 \if!\@abstract!\else\noindent{\renewcommand\baselinestretch{.9}\textsc{Abstract:}}\ \@abstract\afterAbstractSpace\fi
-% Keywords 
+% Keywords
 \if!\@keywords!\else\noindent{\textsc{Keywords:}} \@keywords\afterKeywordsSpace\fi
-% Arxivnumber 
+% Arxivnumber
 \if!\@arxivnumber!\else\noindent{\textsc{ArXiv ePrint:}} \href{http://arxiv.org/abs/\@arxivnumber}{\@arxivnumber}\afterArxivSpace\fi
 % Dedication
 \if!\@dedicated!\else\vbox{\small\it\raggedleft\@dedicated}\afterDedicatedSpace\fi
 %
-\pagestyle{myplain}\ifnotoc\else
+\ifnotoc\else
 \iftoccontinuous\else\newpage\fi
 \beforetochook\hrule
 \tableofcontents
@@ -213,7 +237,7 @@
 \afterTocRuleSpace
 \fi
 \setcounter{footnote}{0}
-\pagenumbering{arabic}
+\pagestyle{myplain}\pagenumbering{arabic}
 } % close the \renewcommand\maketitle{
 
 
@@ -236,27 +260,6 @@
 \setcounter{totalnumber}{5}
 \renewcommand\textfraction{0}
 \renewcommand\floatpagefraction{1}
-
-\textwidth  .72\paperwidth
-\setlength\@tempdima{.76\paperheight}
-\divide\@tempdima\baselineskip
-\@tempcnta=\@tempdima
-\setlength\textheight{\@tempcnta\baselineskip}
-\addtolength\textheight{\topskip}
-
-\voffset -1in
-\topmargin   .05\paperheight
-\headheight  .02\paperheight
-\headsep     .03\paperheight
-\footskip    .07\paperheight
-
-\marginparsep 9\p@
-\marginparpush 6\p@
-
-\hoffset -1in
-\oddsidemargin .14\paperwidth
-\evensidemargin .14\paperwidth
-\marginparwidth .11\paperwidth
 
 \setlength\arraycolsep{2\p@}
 \setlength\tabcolsep{6\p@}
@@ -344,7 +347,7 @@
 \begin{oldthebibliography}{#1}%
 \small%
 \raggedright%
-\setlength{\itemsep}{5pt}%
+\setlength{\itemsep}{5pt plus 0.2ex minus 0.05ex}%
 }%
 {%
 \end{oldthebibliography}%
