--- a/1607.03901/operatorsv2.tex
+++ b/1607.03901/operatorsv2.tex
@@ -1,5 +1,4 @@
 \documentclass[12pt]{article}
-\pdfoutput=1
 \usepackage{jheppub}
 %\usepackage{showlabels}
 \usepackage{verbatim}
@@ -96,7 +95,7 @@ The Anti-de Sitter/Conformal Field Theory (AdS/CFT) correspondence has recently 
   
 \item\textbf{Subregion Duality:} Given a subregion $A$ of a boundary time-slice $\Sigma$, we are able to reconstruct any bulk operator $\phi(x)$ which is in the \textit{causal wedge of A}, denoted $\mathcal{C}_A$ and defined as the intersection of the bulk future and the bulk past of the boundary domain of dependence of $A$, as a CFT operator with support only on $A$ \cite{Hamilton:2006az,Morrison:2014jha,Bousso:2012sj,Czech:2012bh,Bousso:2012mh,Hubeny:2012wa}.  Moreover this reconstruction can be extended  \cite{Czech:2012bh,Wall:2012uf,Headrick:2014cta,Jafferis:2015del,Dong:2016eik} into the larger \textit{entanglement wedge of A}, denoted $\mathcal{E}_A$ and defined as the bulk domain of dependence of any bulk achronal surface $\Xi$ whose only boundaries are $A$ and the Hubeny/Rangamani/Takayanagi (HRT) surface $\gamma_A$ associated to $A$ \cite{Hubeny:2007xt}.  Subregion duality implies a remarkable redundancy in the CFT representation of bulk operators, which is illustrated in figure \ref{subregions}.
 \bfig
-\includegraphics[height=4.5cm]{subregions.pdf}
+\includegraphics[height=4.5cm]{subregions-1.pdf}
 \caption{Subregion duality in AdS/CFT.  In the left diagram I've shaded the intersection of the entanglement wedge $\EA$ of a boundary subregion $A$ with a bulk time-slice.  The operator $\phi(x)$ is in $\EA$, and thus has a representation in the CFT on $A$. The operator $\phi(y)$ is in $\mathcal{E}_{\ol{A}}$, and thus has a representation on $\ol{A}$.  In the right diagram, we have a situation where $\phi(x)$ has no representation on $A$, $B$, or $C$, but does have a representation on $AB$, $BC$, or $AC$.}\label{subregions}
 \efig
 \item\textbf{Ryu-Takayanagi Formula:} Given a CFT state $\rho$, we can define a boundary state $\rho_A$ on any boundary subregion $A$.  If $\rho$ is ``appropriate'' then the von Neumann entropy of $\rho_A$ is given by \cite{Ryu:2006bv}, \cite{Hubeny:2007xt,Lewkowycz:2013nqa,Barrella:2013wja,Faulkner:2013ana}
