--- a/hep-th-0606141/paper.tex
+++ b/hep-th-0606141/paper.tex
@@ -1,6 +1,38 @@
 \documentclass[12pt]{article}
 \usepackage{amsfonts,amssymb,amsmath,graphicx,color,epsfig}
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
+% different \sum and also fixes underbraces
+\input{../helpers/mnsymbol.tex}
+
+% optional
+
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 \newcommand{\be}{\begin{equation}}
 \newcommand{\ee}{\end{equation}}
 \newcommand{\bea}{\begin{eqnarray}}
@@ -30,9 +62,6 @@
 \newcommand{\hy}{\hat{y}}
 
 \begin{document}
-
-\baselineskip 14 pt
-\parskip 12 pt
 
 \begin{titlepage}
 \begin{flushright}
@@ -775,17 +804,18 @@ well-defined kernel, since $f_{\omega k} \lesssim e^{\pi k/2}$ as $k
 below.
 
 The hypergeometric function has an integral representation (\cite{Bateman}, p.~78))
-\[
+\begin{multline*}
 F(a,b,c,z) = {\Gamma(c) \over \Gamma(a) \Gamma(c - a)} {\Gamma(c) \over \Gamma(b) \Gamma(c - b)}
-\int_0^1 ds \, \int_0^1 dt\, s^{a - 1} (1-s)^{c - a - 1} t^{b - 1} (1 - t)^{c - b - 1} (1 - stz)^{-c}\,.
-\]
+\int_0^1 ds \, \int_0^1 dt\, s^{a - 1} (1-s)^{c - a - 1} \\
+t^{b - 1} (1 - t)^{c - b - 1} (1 - stz)^{-c}\,.
+\end{multline*}
 Specializing to a massless field ($\Delta = 2$) this becomes
 %
-\beas
-F(1 - i \hat{\omega}^+, 1 - i \hat{\omega}^-, 2, r_+^2 / r^2) & = & {\sinh \pi \hw^+ \over \pi \hw^+}
+\begin{multline*}
+F(1 - i \hat{\omega}^+, 1 - i \hat{\omega}^-, 2, r_+^2 / r^2) = {\sinh \pi \hw^+ \over \pi \hw^+}
 {\sinh \pi \hw^- \over \pi \hw^-} \int_0^1 ds \, \int_0^1 dt \, \\
-& & \left(s \over 1 - s \right)^{-i \hw^+} \left(t \over 1 - t \right)^{-i \hw^-} \left(1 - s t r_+^2 / r^2\right)^{-2}
-\eeas
+ \left(s \over 1 - s \right)^{-i \hw^+} \left(t \over 1 - t \right)^{-i \hw^-} \left(1 - s t r_+^2 / r^2\right)^{-2}
+\end{multline*}
 %
 Using this to represent the mode functions in (\ref{RindlerId2}), the bulk field can be expressed as a convolution
 %
@@ -906,13 +936,14 @@ contour will get wrapped around the vertical part of the cut.  In
 fact, after shifting $\hp'$, the contribution from horizontal part of
 the $\hp'$ contour is
 %
-\be
+\begin{multline}
 \label{ShiftPhi}
-B_{\rm horizontal} = {1 \over \pi^2 r_+^2} \int_{-\infty}^\infty d\htt' \int_{-\infty}^\infty d\hp' \log \left\vert
+B_{\rm horizontal} = {1 \over \pi^2 r_+^2} \int_{-\infty}^\infty d\htt' \\
+\int_{-\infty}^\infty d\hp' \log \left\vert
 {- (1 - r_+^2 / r^2) \sinh^2 (\htt - \htt') + \sinh^2 (\hp - \hp') \over
  - (1 - r_+^2 / r^2) \cosh^2 (\htt - \htt') + \cosh^2 (\hp - \hp')} \right\vert
 \phi_0(\htt',\hp')\,.
-\ee
+\end{multline}
 %
 But this exactly cancels the contribution (\ref{ShiftT}) from shifting $\htt'$!  So the bulk field arises just
 from the vertical part of the contour, that is from the discontinuity of the logarithm across the cut.  Setting
