--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-11-21 07:56:33 -0500 
+%% Created for Pete Su at 2019-11-21 21:35:34 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Page:2013dx,
+	Archiveprefix = {arXiv},
+	Author = {Page, Don N.},
+	Date-Added = {2019-11-21 21:35:07 -0500},
+	Date-Modified = {2019-11-21 21:35:34 -0500},
+	Doi = {10.1088/1475-7516/2013/09/028},
+	Eprint = {1301.4995},
+	Journal = {JCAP},
+	Note = {\href{https://arxiv.org/abs/1301.4995}{arXiv:1301.4995}},
+	Pages = {028},
+	Primaryclass = {hep-th},
+	Slaccitation = {%%CITATION = ARXIV:1301.4995;%%},
+	Title = {{Time Dependence of Hawking Radiation Entropy}},
+	Volume = {1309},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1088/1475-7516/2013/09/028}}
 
 @article{Morrison:2014jha,
 	Archiveprefix = {arXiv},
