--- a/1601.05416/entanglementprl.tex
+++ b/1601.05416/entanglementprl.tex
@@ -33,7 +33,7 @@ colorlinks=true
 
 % optional
 
-%\input{../helpers/revtex-12-fix.tex}
+\input{../helpers/revtex-12-fix.tex}
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
