--- a/1403.3426/Morrison2014.tex
+++ b/1403.3426/Morrison2014.tex
@@ -41,7 +41,7 @@ bookmarksopenlevel=10
 
 % optional
 
-%\input{../helpers/revtex-12-fix.tex}
+\input{../helpers/revtex-12-fix.tex}
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
