--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,30 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-11-21 21:35:34 -0500 
+%% Created for Pete Su at 2019-11-22 07:24:10 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Dong:2014lwa,
+	Archiveprefix = {arXiv},
+	Author = {Almheiri, Ahmed and Dong, Xi and Harlow, Daniel},
+	Date-Added = {2019-11-22 07:23:41 -0500},
+	Date-Modified = {2019-11-22 07:24:10 -0500},
+	Doi = {10.1007/JHEP04(2015)163},
+	Eprint = {1411.7041},
+	Journal = {JHEP},
+	Note = {\href{https://arxiv.org/abs/1411.7041}{arXiv:1411.7041}},
+	Pages = {163},
+	Primaryclass = {hep-th},
+	Reportnumber = {SU-ITP-14-30},
+	Slaccitation = {%%CITATION = ARXIV:1411.7041;%%},
+	Title = {{Bulk Locality and Quantum Error Correction in AdS/CFT}},
+	Volume = {04},
+	Year = {2015},
+	Bdsk-Url-1 = {https://doi.org/10.1007/JHEP04(2015)163}}
 
 @article{Page:2013dx,
 	Archiveprefix = {arXiv},
