--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,47 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-11-22 07:24:10 -0500 
+%% Created for Pete Su at 2019-11-22 08:34:43 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Maldacena:1997re,
+	Archiveprefix = {arXiv},
+	Author = {Maldacena, Juan Martin},
+	Date-Added = {2019-11-22 08:34:32 -0500},
+	Date-Modified = {2019-11-22 08:34:32 -0500},
+	Doi = {10.1023/A:1026654312961, 10.4310/ATMP.1998.v2.n2.a1},
+	Eprint = {hep-th/9711200},
+	Journal = {Int. J. Theor. Phys.},
+	Note = {[Adv. Theor. Math. Phys.2,231(1998)]},
+	Pages = {1113-1133},
+	Primaryclass = {hep-th},
+	Reportnumber = {HUTP-97-A097, HUTP-98-A097},
+	Slaccitation = {%%CITATION = HEP-TH/9711200;%%},
+	Title = {{The Large N limit of superconformal field theories and supergravity}},
+	Volume = {38},
+	Year = {1999},
+	Bdsk-Url-1 = {https://doi.org/10.1023/A:1026654312961,%2010.4310/ATMP.1998.v2.n2.a1}}
+
+@article{Maldacena:1999ti,
+	Archiveprefix = {arXiv},
+	Author = {Aharony, Ofer and Gubser, Steven S. and Maldacena, Juan Martin and Ooguri, Hirosi and Oz, Yaron},
+	Date-Added = {2019-11-22 08:31:19 -0500},
+	Date-Modified = {2019-11-22 08:31:30 -0500},
+	Doi = {10.1016/S0370-1573(99)00083-6},
+	Eprint = {hep-th/9905111},
+	Journal = {Phys. Rept.},
+	Pages = {183-386},
+	Primaryclass = {hep-th},
+	Reportnumber = {CERN-TH-99-122, HUTP-99-A027, LBNL-43113, RU-99-18, UCB-PTH-99-16, LBL-43113},
+	Slaccitation = {%%CITATION = HEP-TH/9905111;%%},
+	Title = {{Large N field theories, string theory and gravity}},
+	Volume = {323},
+	Year = {2000},
+	Bdsk-Url-1 = {https://doi.org/10.1016/S0370-1573(99)00083-6}}
 
 @article{Dong:2014lwa,
 	Archiveprefix = {arXiv},
