--- a/1403.3426/Morrison2014.tex
+++ b/1403.3426/Morrison2014.tex
@@ -29,13 +29,15 @@ bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
+\usepackage[noBBpl,osf]{mathpazo}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
-
+\usepackage[dotinlabels]{titletoc}
+\titlelabel{{\thetitle}.\quad}
+    
 % different \sum and also fixes underbraces
 \input{../helpers/mnsymbol.tex}
 
@@ -161,7 +163,7 @@ bookmarksopenlevel=10
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\date{13 Mar 2014}
 \title{Boundary-to-bulk maps for AdS causal wedges
 and the Reeh-Schlieder property in holography}
 
@@ -215,7 +217,10 @@ and the Reeh-Schlieder property in holography}
 
 \newpage
 
+{
+%\fontfamily{pplx}\selectfont
 \tableofcontents
+}
 
 \newpage
 
