--- a/1501.00007/AdSCFT_v2.tex
+++ b/1501.00007/AdSCFT_v2.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,a4paper]{article}
+\documentclass[12pt]{article}
 \pdfoutput=1
 \usepackage{jheppub}
 
@@ -12,6 +12,37 @@
 \usepackage{booktabs}
 \usepackage{mathrsfs}
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
+% different \sum and also fixes underbraces
+\input{../helpers/mnsymbol.tex}
+
+% optional
+
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 % ----------------------------------------------------------------
 \vfuzz2pt % Don't report over-full v-boxes if over-edge is small
@@ -40,20 +71,6 @@
   \captiondelim{: }
   \hangcaption
   \renewcommand{\figurename}{Fig.}
-
-% spacing between lines and paragraphs
-\def\baselinestretch{1.2}
-\parskip 6 pt
-
-% set margins to be optimal
-%\marginparwidth 0pt
-\oddsidemargin  0.75in
-%\evensidemargin  0pt
-%\marginparsep 0pt
-\topmargin   0in
-\textwidth   6.8in
-\textheight  9.8 in
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \DeclareMathOperator{\sech}{sech}
 
