--- a/1501.00007/AdSCFT_v2.tex
+++ b/1501.00007/AdSCFT_v2.tex
@@ -37,6 +37,7 @@ bookmarksopenlevel=10
 
 % different \sum and also fixes underbraces
 \input{../helpers/mnsymbol.tex}
+\parskip=0pt
 
 % optional
 
@@ -274,7 +275,6 @@ In fact, this resolved a puzzle that previously impeded advancing the suggestion
 } on the two sides of the transition, \cite{Horowitz:1996nw} found that the entropies also match, up to a constant of order unity which depends on the precise transition point. 
 
 By 1996 string theory has made significant advances towards understanding the quantum aspects of black holes.  Cracking the black hole Information Paradox seemed to be just around the corner, and there were many tantalizing hints at a deeper structure underlying the many newly-discovered mysterious connections.  Though the former hope was rather too optimistic, little did we expect how substantial a progress the following year will see on the latter front.
-
 
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \section{The \AC\ correspondence}
