--- a/1501.00007/AdSCFT_v2.tex
+++ b/1501.00007/AdSCFT_v2.tex
@@ -28,9 +28,9 @@ bookmarksopenlevel=10
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl,sc]{mathpazo}
-\linespread{1.1}
+\linespread{1.05}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 717.75pt}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
@@ -138,12 +138,12 @@ We give a brief review of the \AC\ correspondence, which posits the equivalence 
 %%\keywords{AdS-CFT correspondence}
 %
 \begin{document}
+
 %\begin{flushright} \small{DCPT-15/01} \end{flushright}
 
 \maketitle
 
 
-\flushbottom
 \renewcommand{\thefootnote}{\arabic{footnote}}
 % ______________________________________
 \newpage
@@ -269,10 +269,9 @@ reproduced the microscopic entropy of many other black holes described by more p
 One might expect that supersymmetry is essential, but in fact one can reproduce the entropy of some nonextremal black holes as well.  Although such black holes are quantum mechanically unstable due to Hawking evaporation, we can describe the Hawking process at weak coupling, as emission of closed strings from the brane.  More impressively still, the weakly-coupled D-brane description can even correctly reproduce the full radiation  spectrum of the black hole, including the grey-body factors due to the curved spacetime through which the Hawking quanta propagate  \cite{Maldacena:1996ix}.
 
 
-As an aside, we should remark that sufficiently far from extremality we do lose control.  So the `simplest' black hole from the general relativistic standpoint and one which is perhaps closest to the hearts of most relativists, namely the \schw\ solution, still eludes the exact microstate counting.  Nevertheless, the scaling of entropy with area (as well as correct dependence on other charges) can be reproduced quite generally, by viewing the black hole at weak coupling as a bound state of strings and D-branes with the same conserved charges.  The relation between the two descriptions was established by Horowitz \& Polchinski    \cite{Horowitz:1996nw} and is known as the ``correspondence principle":
-Consider an excited fundamental string.  As we increase the string coupling $\gst$, the string self-gravitates more strongly and shrinks, while simultaneously the Schwarzschild radius $\GN \, M$ increases.  At high enough coupling the string shrinks to within its own Schwarzschild radius, at which point the object is more appropriately described as a black hole.  Conversely, if we start with a black hole and decrease the coupling,  the horizon eventually becomes string size (which can however still be macroscopic in Planck units),  at which point we can no longer trust the classical black hole solution and the system is more appropriately described as an excited string.  Matching the masses\footnote{
+As an aside, we should remark that sufficiently far from extremality we do lose control.  So the `simplest' black hole from the general relativistic standpoint and one which is perhaps closest to the hearts of most relativists, namely the \schw\ solution, still eludes the exact microstate counting.  Nevertheless, the scaling of entropy with area (as well as correct dependence on other charges) can be reproduced quite generally, by viewing the black hole at weak coupling as a bound state of strings and D-branes with the same conserved charges.  The relation between the two descriptions was established by Horowitz \& Polchinski    \cite{Horowitz:1996nw} and is known as the ``correspondence principle": Consider an excited fundamental string.  As we increase the string coupling $\gst$, the string self-gravitates more strongly and shrinks, while simultaneously the Schwarzschild radius $\GN \, M$ increases.  At high enough coupling the string shrinks to within its own Schwarzschild radius, at which point the object is more appropriately described as a black hole.  Conversely, if we start with a black hole and decrease the coupling,  the horizon eventually becomes string size (which can however still be macroscopic in Planck units),  at which point we can no longer trust the classical black hole solution and the system is more appropriately described as an excited string. Matching the masseson the two sides of the transition, \cite{Horowitz:1996nw} found that the entropies also match, up to a constant of order unity which depends on the precise transition point\footnote{
 In fact, this resolved a puzzle that previously impeded advancing the suggestion \cite{Susskind:1993ws} that black holes are really excited string states; namely, the respective entropies don't scale the same way with the mass:  $S_{string} \sim \lst \, M$ while (say in 4 dimensions) $S_{BH} \sim \GN \, M^2$.  The resolution is that both masses cannot be kept fixed simultaneously as we vary the string coupling.  Making them match at the transition when the black hole is string size ($\gst \sim (M \, \lst)^{-1/2}$) makes the entropies agree as well.  This agreement continues to hold more generally in all dimensions and in the presence of extra charges, angular momentum, etc.
-} on the two sides of the transition, \cite{Horowitz:1996nw} found that the entropies also match, up to a constant of order unity which depends on the precise transition point. 
+}. 
 
 By 1996 string theory has made significant advances towards understanding the quantum aspects of black holes.  Cracking the black hole Information Paradox seemed to be just around the corner, and there were many tantalizing hints at a deeper structure underlying the many newly-discovered mysterious connections.  Though the former hope was rather too optimistic, little did we expect how substantial a progress the following year will see on the latter front.
 
@@ -486,7 +485,7 @@ ds^2 = - \left( \frac{\rho^2}{\Rads^2} + 1 \right) \, d\tau^2 + \frac{d\rho^2}{\
 %
 Although both \Poinc\ AdS \req{e:AdSPoinc} and global AdS \req{e:gAdS} are explicitly static, the timelike Killing fields $\dda{t}$ and $\dda{\tau}$ are distinct.  
 % Figure 
-\begin{figure}
+\begin{figure}[tp]
 \begin{center}
 \includegraphics[width=5.5in]{fig_AdS_PD}
 \caption{
