--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,30 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-11-22 08:34:43 -0500 
+%% Created for Pete Su at 2019-11-24 10:11:37 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{deHaro:2015pia,
+	Archiveprefix = {arXiv},
+	Author = {De Haro, Sebastian and Mayerson, Daniel R. and Butterfield, Jeremy N.},
+	Date-Added = {2019-11-24 10:11:25 -0500},
+	Date-Modified = {2019-11-24 10:11:25 -0500},
+	Doi = {10.1007/s10701-016-0037-4},
+	Eprint = {1509.09231},
+	Journal = {Found. Phys.},
+	Number = {11},
+	Pages = {1381-1425},
+	Primaryclass = {physics.hist-ph},
+	Reportnumber = {MCTP-15-22},
+	Slaccitation = {%%CITATION = ARXIV:1509.09231;%%},
+	Title = {{Conceptual Aspects of Gauge/Gravity Duality}},
+	Volume = {46},
+	Year = {2016},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s10701-016-0037-4}}
 
 @article{Maldacena:1997re,
 	Archiveprefix = {arXiv},
