--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-11-24 10:11:37 -0500 
+%% Created for Pete Su at 2019-11-24 10:20:40 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Polchinski:2010hw,
+	Archiveprefix = {arXiv},
+	Author = {Polchinski, Joseph},
+	Booktitle = {{Proceedings, Theoretical Advanced Study Institute in Elementary Particle Physics (TASI 2010). String Theory and Its Applications: From meV to the Planck Scale: Boulder, Colorado, USA, June 1-25, 2010}},
+	Date-Added = {2019-11-24 10:19:49 -0500},
+	Date-Modified = {2019-11-24 10:20:29 -0500},
+	Doi = {10.1142/9789814350525_0001},
+	Eprint = {1010.6134},
+	Note = {\href{https://arxiv.org/abs/1010.6134}{arXiv:1010.6134}},
+	Pages = {3-46},
+	Primaryclass = {hep-th},
+	Slaccitation = {%%CITATION = ARXIV:1010.6134;%%},
+	Title = {{Introduction to Gauge/Gravity Duality}},
+	Year = {2010},
+	Bdsk-Url-1 = {https://doi.org/10.1142/9789814350525_0001}}
 
 @article{deHaro:2015pia,
 	Archiveprefix = {arXiv},
