--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,30 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-11-24 10:20:40 -0500 
+%% Created for Pete Su at 2019-11-24 10:48:14 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Hubeny:2014bla,
+	Archiveprefix = {arXiv},
+	Author = {Hubeny, Veronika E.},
+	Date-Added = {2019-11-24 10:47:51 -0500},
+	Date-Modified = {2019-11-24 10:48:14 -0500},
+	Doi = {10.1088/0264-9381/32/12/124010},
+	Eprint = {1501.00007},
+	Journal = {Class. Quant. Grav.},
+	Note = {\href{https://arxiv.org/abs/1501.00007}{arXiv:1501.00007}},
+	Number = {12},
+	Pages = {124010},
+	Primaryclass = {gr-qc},
+	Slaccitation = {%%CITATION = ARXIV:1501.00007;%%},
+	Title = {{The AdS/CFT Correspondence}},
+	Volume = {32},
+	Year = {2015},
+	Bdsk-Url-1 = {https://doi.org/10.1088/0264-9381/32/12/124010}}
 
 @inproceedings{Polchinski:2010hw,
 	Archiveprefix = {arXiv},
