--- a/hep-th-0106112v6/eternal.tex
+++ b/hep-th-0106112v6/eternal.tex
@@ -1,4 +1,4 @@
-\input harvmac.tex
+\input ../helpers/harvmac-psu.tex
 \input epsf.tex
 \def\figin{\epsfcheck\figin}\def\figins{\epsfcheck\figins}
 \def\epsfcheck{\ifx\epsfbox\UnDeFiNeD
@@ -488,23 +488,19 @@ arXiv:gr-qc/9908031.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\baselineskip=12pt
 
 \Title{\vbox{
 \hbox{NSF-ITP-01-59}
 \hbox{\tt hep-th/0106112}}}{
 Eternal black holes in Anti-de-Sitter 
 }
-\bigskip
 \centerline{ Juan Maldacena }
-\bigskip
 \centerline{ Jefferson Physical Laboratory}
 \centerline{Harvard University}
 \centerline{Cambridge, MA 02138, USA}
-\bigskip
 \centerline{ Institute for Advanced Study}
 \centerline{Princeton, NJ 08540}
-
-\vskip .3in
 
 We propose a dual non-perturbative description for  maximally 
 extended Schwarzschild Anti-de-Sitter spacetimes.
@@ -515,10 +511,7 @@ also discuss a version of the  information loss
 paradox  and its resolution. 
 
 
-\bigskip
-
-\vskip 3in
-
+\vfill\eject
 
 \newsec{ Introduction}
 
@@ -532,7 +525,6 @@ approach the
 singularities.  }
 {\epsfxsize1.5in\epsfbox{penrose.eps}}
 
-
  An eternal black hole has an extended Penrose diagram which is 
 depicted in  \penrose .  
  This Penrose diagram has two asymptotically 
@@ -542,18 +534,18 @@ dependent spacetime  since there is no global  timelike isometry.
 The regions close to the spacelike singularities can be viewed 
 as big-bang or big-crunch cosmologies (which are homogeneous but
 not isotropic). 
+
  We will  propose that this spacetime
 can be holographically described by considering two identical, 
 non-interacting copies of the conformal field theory and picking a 
 particular entangled state. This point of view is based on 
 Israel's description of eternal black holes \israel . 
  A similar observation in the context of AdS/CFT  was made in 
-\refs{\hm,\vijaytrivedi,\carnero} \foot{In \vijaytrivedi\  the
+\refs{\hm,\vijaytrivedi,\carnero}\foot{In \vijaytrivedi\  the
 formula for the entangled state as a function 
 of the temperature  is off by a  factor of 2.
 It seems to be the related to the  factor of 2 that led to the claim 
-\thooft\  that
-the black hole temperature is twice what Hawking originally computed.}.  
+\thooft\  that the black hole temperature is twice what Hawking originally computed.}.  
 Here we will emphasize that by including both copies
 we naturally get a description of the interior region of black holes, 
 including the region near the singularities.
