--- a/helpers/harvmac-psu.tex
+++ b/helpers/harvmac-psu.tex
@@ -43,16 +43,16 @@
 %\message{ big or little (b/l)? }\read-1 to\answ
 %
 \ifx\answ\bigans\message{(This will come out unreduced.}
-\magnification=1200\unredoffs\baselineskip=16pt plus 2pt minus 1pt
+\magnification=1200\unredoffs\baselineskip=12pt plus 2pt minus 1pt
 \hsbody=\hsize \hstitle=\hsize %take default values for unreduced format
-\baselineskip=14pt plus 2pt minus 1pt
+\baselineskip=13pt plus 2pt minus 1pt
 \hsize=5.75truein
 \hstitle=\hsize
 \hsbody=\hsize
 \hoffset=.3truein
 %
 \else\message{(This will be reduced.} \let\l@r=L
-\magnification=1000\baselineskip=16pt plus 2pt minus 1pt \vsize=7truein
+\magnification=1000\baselineskip=12pt plus 2pt minus 1pt \vsize=7truein
 \redoffs \hstitle=8truein\hsbody=4.75truein\fullhsize=10truein\hsize=\hsbody
 %
 \output={\ifnum\pageno=0 %%% This is the HUTP version
@@ -83,7 +83,7 @@
 \def\draft{\draftmode\Date{\draftdate}}
 \def\draftmode{\message{ DRAFTMODE }\def\draftdate{{\rm preliminary draft:
 \number\month/\number\day/\number\yearltd\ \ \hourmin}}%
-\headline={\hfil\draftdate}\writelabels\baselineskip=20pt plus 2pt minus 2pt
+\headline={\hfil\draftdate}\writelabels\baselineskip=12pt plus 2pt minus 2pt
  {\count255=\time\divide\count255 by 60 \xdef\hourmin{\number\count255}
   \multiply\count255 by-60\advance\count255 by\time
   \xdef\hourmin{\hourmin:\ifnum\count255<10 0\fi\the\count255}}}
@@ -163,10 +163,10 @@
 \immediate\write16{*** WARNING: the label \string#1 is already defined ***}\fi}
 %
 %			 footnotes
-\newskip\footskip\footskip14pt plus 1pt minus 1pt %sets footnote baselineskip
+\newskip\footskip\footskip11pt %sets footnote baselineskip
 \def\footnotefont{\ninepoint}\def\f@t#1{\footnotefont #1\@foot}
 \def\f@@t{\baselineskip\footskip\bgroup\footnotefont\aftergroup\@foot\let\next}
-\setbox\strutbox=\hbox{\vrule height9.5pt depth4.5pt width0pt}
+\setbox\strutbox=\hbox{\vrule height0pt depth4.5pt width0pt}
 %
 \global\newcount\ftno \global\ftno=0
 %\def\foot{\global\advance\ftno by1\footnote{$^{\the\ftno}$}}
@@ -219,7 +219,7 @@
 \def\addref#1{\immediate\write\rfile{\noexpand\item{}#1}} %now unnecessary
 %
 \def\listrefs{\footatend\vfill\supereject\immediate\closeout\rfile\writestoppt
-\baselineskip=\footskip\centerline{{\bf References}}\bigskip{\parindent=20pt%
+\baselineskip=12pt\parskip=6pt\centerline{{\bf References}}\bigskip{\parindent=20pt%
 \frenchspacing\escapechar=` \input \jobname.refs\vfill\eject}\nonfrenchspacing}
 %
 \def\startrefs#1{\immediate\openout\rfile=\jobname.refs\refno=#1}
@@ -251,7 +251,7 @@
 \reflabeL{#1\hskip.55in}\pctsign}}\global\advance\figno by1\findarg}
 %
 \def\listfigs{\vfill\eject\immediate\closeout\ffile{\parindent40pt
-\baselineskip14pt\centerline{{\bf Figure Captions}}\nobreak\medskip
+\baselineskip12pt\centerline{{\bf Figure Captions}}\nobreak\medskip
 \escapechar=` \input \jobname.figs\vfill\eject}}
 %
 \def\xfig{\expandafter\xf@g}\def\xf@g fig.\penalty\@M\ {}
@@ -269,7 +269,7 @@
 \def\figinsert{\goodbreak\midinsert}
 \def\ifig#1#2#3{\DefWarn#1\xdef#1{fig.~\noexpand\hyperref{}{figure}%
 {\the\figno}{\the\figno}}\writedef{#1\leftbracket fig.\noexpand~\xfig#1}%
-\figinsert\figin{\centerline{#3}}\medskip\centerline{\vbox{\baselineskip12pt
+\figinsert\figin{\centerline{#3}}\medskip\centerline{\vbox{\baselineskip11pt
 \advance\hsize by -1truein\noindent\wrlabeL{#1=#1}\footnotefont%
 {\bf Fig.~\hyperdef\hypernoname{figure}{\the\figno}{\the\figno}:} #2}}
 \bigskip\endinsert\global\advance\figno by1}
@@ -309,7 +309,7 @@
 \def\listtoc{\immediate\closeout\tfile\immediate\openin\ch@ckfile=\jobname.toc
 \ifeof\ch@ckfile\message{no file \jobname.toc, no table of contents this pass}%
 \else\closein\ch@ckfile\centerline{\bf Contents}\nobreak\medskip%
-{\baselineskip=12pt\footnotefont\parskip=0pt\catcode`\@=11\input\jobname.toc
+{\baselineskip=11pt\footnotefont\parskip=0pt\catcode`\@=11\input\jobname.toc
 \catcode`\@=12\bigbreak\bigskip}\fi}
 %
 \catcode`\@=12 % at signs are no longer letters
