--- a/helpers/harvmac-psu.tex
+++ b/helpers/harvmac-psu.tex
@@ -43,9 +43,9 @@
 %\message{ big or little (b/l)? }\read-1 to\answ
 %
 \ifx\answ\bigans\message{(This will come out unreduced.}
-\magnification=1200\unredoffs\baselineskip=12pt plus 2pt minus 1pt
+\magnification=1200\unredoffs\baselineskip=12pt
 \hsbody=\hsize \hstitle=\hsize %take default values for unreduced format
-\baselineskip=13pt plus 2pt minus 1pt
+\baselineskip=13pt
 \hsize=5.75truein
 \hstitle=\hsize
 \hsbody=\hsize
@@ -166,7 +166,7 @@
 \newskip\footskip\footskip11pt %sets footnote baselineskip
 \def\footnotefont{\ninepoint}\def\f@t#1{\footnotefont #1\@foot}
 \def\f@@t{\baselineskip\footskip\bgroup\footnotefont\aftergroup\@foot\let\next}
-\setbox\strutbox=\hbox{\vrule height0pt depth4.5pt width0pt}
+\setbox\strutbox=\hbox{\vrule height8.5pt depth4.5pt width0pt}
 %
 \global\newcount\ftno \global\ftno=0
 %\def\foot{\global\advance\ftno by1\footnote{$^{\the\ftno}$}}
@@ -269,7 +269,7 @@
 \def\figinsert{\goodbreak\midinsert}
 \def\ifig#1#2#3{\DefWarn#1\xdef#1{fig.~\noexpand\hyperref{}{figure}%
 {\the\figno}{\the\figno}}\writedef{#1\leftbracket fig.\noexpand~\xfig#1}%
-\figinsert\figin{\centerline{#3}}\medskip\centerline{\vbox{\baselineskip11pt
+\figinsert\figin{\centerline{#3}}\medskip\centerline{\vbox{\baselineskip11pt%
 \advance\hsize by -1truein\noindent\wrlabeL{#1=#1}\footnotefont%
 {\bf Fig.~\hyperdef\hypernoname{figure}{\the\figno}{\the\figno}:} #2}}
 \bigskip\endinsert\global\advance\figno by1}
