--- a/hep-th-0106112v6/eternal.tex
+++ b/hep-th-0106112v6/eternal.tex
@@ -490,7 +490,7 @@ Eternal black holes in Anti-de-Sitter
 \centerline{ Institute for Advanced Study}
 \centerline{Princeton, NJ 08540}
 
-\vskip1in
+\vskip.5in
 \centerline{\bf Abstract}
 \medskip
 We propose a dual non-perturbative description for  maximally 
@@ -502,7 +502,8 @@ also discuss a version of the  information loss
 paradox  and its resolution. 
 
 
-\vfill\eject
+\Date{13 Nov 2001}
+
 
 \newsec{ Introduction}
 
@@ -525,8 +526,6 @@ dependent spacetime  since there is no global  timelike isometry.
 The regions close to the spacelike singularities can be viewed 
 as big-bang or big-crunch cosmologies (which are homogeneous but
 not isotropic). 
-
-\tracingnone
 
  We will  propose that this spacetime
 can be holographically described by considering two identical, 
