--- a/1310.4319/AdS_CFT_red.tex
+++ b/1310.4319/AdS_CFT_red.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,notitlepage,a4paper]{article}
+\documentclass[12pt,notitlepage]{article}
 \pdfoutput=1
 
 
@@ -10,16 +10,39 @@
 \usepackage{cite}
 
 
-\pagestyle{plain}
-\textheight=8.5truein
-\textwidth=6.5truein
-\overfullrule=0pt
-\parskip=2pt
-\parindent=12pt
-\headheight=0in
-\headsep=0in
-\topmargin=0.50in
-\oddsidemargin=0in
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc,osf]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+\usepackage[dotinlabels]{titletoc}
+\titlelabel{{\thetitle}.\quad}
+
+% different \sum and also fixes underbraces
+\input{../helpers/mnsymbol.tex}
+
+% optional
+
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 %--------+---------+---------+---------+---------+---------+---------+
 
 \newcommand{\ack}[1]{{\bf Pfft!! #1}}
@@ -106,6 +129,7 @@ This is a pedagogical introduction to the AdS/CFT correspondence, based on lectu
 
 
 
+\newpage
 
 \section{Introduction and motivation}
 \label{sec:1}
