--- a/1310.4319/AdS_CFT_red.tex
+++ b/1310.4319/AdS_CFT_red.tex
@@ -25,7 +25,7 @@ bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl,sc,osf]{mathpazo}
+\usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
