--- a/1107.3967/1107.3967.tex
+++ b/1107.3967/1107.3967.tex
@@ -14,12 +14,25 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage{amssymb}
-\usepackage{amssymb,epsfig,amsmath,euscript,array,color}
-\usepackage[T1]{fontenc}
-\usepackage[altbullet]{lucidabr}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc,osf]{mathpazo}
 \linespread{1.1}
-\usepackage[letterpaper, margin=1.2in]{geometry}
-%\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+\usepackage[dotinlabels]{titletoc}
+\titlelabel{{\thetitle}.\quad}
+
+% different \sum and also fixes underbraces
+\input{../helpers/mnsymbol.tex}
+
+% optional
+
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 %\usepackage{psfrag}
 \usepackage{graphics,graphicx}
